deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd
    spec:
      containers:
      - image: httpd
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - name: index-html
          mountPath: /var/www/html/index.html
          subPath: index.html
          readOnly: true
      volumes:
      - name: index-html
        configMap:
          name: index-html
status: {}
