route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: httpd
    weight: null
status: {}
